k8/ingress_mattermost/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysqlserver
  namespace: ingress-nginx
spec:
  replicas: 1
  serviceName: mysql
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mysql
          image: gowdasagar/mysql:mysql
          imagePullPolicy: Always
          ports:
            - name: tpc
              protocol: TCP
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        storageClassName: standard
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
