k8/ingress_mattermost/sqlservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: ingress-nginx
  labels:
    app: mysql
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - name: tcp
      protocol: TCP
      port: 3306
