k8/ingress_mattermost/ingress_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
 name: example-ingress
 namespace: ingress-nginx
spec:
 defaultBackend:
  service:
   name: mattermost-service
   port:
    number: 8065
